icon buttons without spacing fix

--- a/src/components/NewGoal/NewGoal.module.css
+++ b/src/components/NewGoal/NewGoal.module.css
@@ -26,7 +26,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50px;
+  width: 75px;
   height: 50px;
 }
 
