--- a/src/pages/ProfileView/ProfileView.module.css
+++ b/src/pages/ProfileView/ProfileView.module.css
@@ -22,3 +22,11 @@
   align-items: center;
   justify-content: center;
 }
+
+.editButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 75px;
+  height: 50px;
+}
